# Learning

./: .gitignore
part1/canvas/rasterizer/: CMakeLists.txt
part2/big_data/practice2/src/main/java/bigdata/assignment2/problem1/: WordCountMapper.java  WordCountReducer.java
part2/big_data/practice2/src/main/java/bigdata/assignment2/problem2/: AlphabetPartitioner2.java  WordCountCombiner2.java
part2/graphics_lab/Lab1/shaders/: cube.frag  cube.vert  triangle.frag
part2/graphics_lab/Lab1/src/: cube.cpp  triangle.cpp
part2/graphics_lab/Lab2/: CMakeLists.txt
part2/graphics_lab/Lab3/shaders/: phong.frag  sphere.frag  sphere.vert
part2/graphics_lab/Lab3/src/: Shader.cpp  Shader.hpp  sphere.cpp
part2/graphics_lab/Lab4/: CMakeLists.txt  vcpkg.json
part2/graphics_lab/Lab4/shaders/: bezier.geom  loop.vert
part2/graphics_lab/Lab4/src/: Mesh.cpp  Mesh.hpp
part2/graphics_lab/Lab5/: CMakeLists.txt
part2/graphics_lab/Lab5/shaders/: map.frag  phong.frag
part2/graphics_lab/Lab6/: vcpkg.json
part2/graphics_lab/Lab6/shaders/: cubemap.frag  prefilter.frag  shading.frag  shading.vert
part2/graphics_lab/Lab6/src/: Scene.hpp
part2/software_test/test1/src/test/java/: TestCtrip.java
part2/software_test/test1/src/test/python/: TestCtrip.py
part2/software_test/test2/src/test/java/dk/ahle/thomas/mcts2048/test/: BUGReportTest.java  BitBoardTest.java  BoardTest2.java
part2/viewer/: .clang-tidy  CMakeLists.txt  vcpkg.json
part2/viewer/src/: main.cpp
part2/viewer/src/components/: Light.hpp  Material.hpp  Transform.cpp  Transform.hpp
part2/viewer/src/graphics/: GLMesh.cpp  GLShader.cpp  GLShader.hpp
part2/viewer/src/resource/: GraphicsManager.cpp  GraphicsManager.hpp
part2/viewer/src/tools/: helper.hpp
rasterizer/: CMakeLists.txt
rasterizer/src/: Pipeline.cpp
raytracer/: CMakeLists.txt  vcpkg.json
raytracer/src/: main.cpp
v1/canvas/: CMakeLists.txt  CMakePresets.json
v1/canvas/rasterizer/src/: Pipeline.cpp
v1/canvas/raytracer/: CMakeLists.txt
v1/canvas/raytracer/src/: main.cpp
v1/nutrition/: build.gradle
v2/big_data/: .gitignore
v2/big_data/practice1/: pom.xml
v2/big_data/practice1/src/main/java/com/example/: HDFSFileManager.java
v2/big_data/practice2/java_code/: exec.ps1  pom.xml  run.ps1
v2/big_data/practice2/java_code/src/main/java/bigdata/assignment2/problem1/: WordCountDriver.java
v2/big_data/practice2/java_code/src/main/java/bigdata/assignment2/problem2/: WordCountDriver2.java  WordCountMapper2.java  WordCountReducer2.java
v2/big_data/practice2/java_code/src/main/java/bigdata/assignment2/problem3/: WordCountCombiner3.java  WordCountDriver3.java  WordCountMapper3.java  WordCountReducer3.java
v2/graphics_lab/: .gitignore
v2/graphics_lab/Lab1/question/: CMakeLists.txt
v2/graphics_lab/Lab1/question/src/: cube.cpp  triangle.cpp
v2/graphics_lab/Lab2/answer/: vcpkg.json
v2/graphics_lab/Lab2/answer/shaders/: cube.frag  cube.vert  pyramid.vert
v2/graphics_lab/Lab2/answer/src/: Camera.cpp  cube.cpp  pyramid.cpp
v2/graphics_lab/Lab2/question/: CMakePresets.json
v2/graphics_lab/Lab2/question/shaders/: cube.vert  pyramid.vert
v2/graphics_lab/Lab2/question/src/: Camera.cpp  Camera.hpp  pyramid.cpp
v2/graphics_lab/Lab3/answer/shaders/: blinn_phong.frag
v2/graphics_lab/Lab3/answer/src/: Camera.cpp  sphere2.cpp
v2/graphics_lab/Lab3/question/: CMakeLists.txt
v2/graphics_lab/Lab3/question/shaders/: blinn_phong.frag  phong.frag  sphere.frag
v2/graphics_lab/Lab3/question/src/: Camera.hpp  Light.cpp  Light.hpp
v2/graphics_lab/Lab4/answer/shaders/: loop.frag
v2/graphics_lab/Lab4/answer/src/: loop.cpp
v2/graphics_lab/Lab4/question/shaders/: bezier.frag  bezier.geom
v2/graphics_lab/Lab4/question/src/: bezier.cpp  loop.cpp
v2/graphics_lab/Lab5/answer/shaders/: map.vert  shadow.vert
v2/graphics_lab/Lab5/answer/src/: Scene.cpp  Shader.cpp  main.cpp
v2/graphics_lab/Lab5/question/shaders/: phong.frag  phong.vert
v2/graphics_lab/Lab5/question/src/: Scene.cpp  Scene.hpp  Shader.hpp
v2/graphics_lab/Lab6/answer/: CMakeLists.txt
v2/graphics_lab/Lab6/answer/shaders/: cubemap.vert  irradiance.frag  skybox.frag
v2/graphics_lab/Lab6/answer/src/: Scene.cpp  main.cpp
v2/graphics_lab/Lab6/question/shaders/: irradiance.frag  prefilter.frag
v2/software_test/test4/src/test/java/dk/ahle/thomas/mcts2048/test/: BoardTest.java  ExampleTest.java
v2/software_test/test5/: augment_a.py  augment_b.py  augment_c.py  test.py
v2/viewer/: .gitignore  README.md
v2/viewer/shaders/: default.frag  default.vert
v2/viewer/src/components/: AABB.hpp  Camera.hpp  Image.hpp  Mesh.hpp  SubMesh.hpp  Texture.hpp
v2/viewer/src/graphics/: GLBuffer.cpp  GLBuffer.hpp  GLMesh.hpp  GLTexture.cpp  GLTexture.hpp
v2/viewer/src/resource/: AssetManager.cpp  AssetManager.hpp
